<resources>
    <string name="app_name">DivinandoApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Usuario</string>
    <string name="nav_header_subtitle">usuario@example.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!--NAVIGATION DRAWER MENU-->
    <string name="menu_home">Home</string>
    <string name="menu_ranking">Ranking</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_login">Log In</string>
    <string name="menu_logout">Log Out</string>

    <!--LOGIN-->
    <string name="textLoginUsername">Correo electrónico</string>
    <string name="textLoginPassword">Contraseña</string>
    <string name="btForgotPass">¿Olvidaste tu contraseña?</string>
    <string name="btLogin">entrar</string>
    <string name="tvCreateAccount">¿Aún no tienes una cuenta?</string>
    <string name="btCreateAccount">Registrarse</string>

    <!--REGISTER-->
    <string name="btRegister">Registrarse</string>
    <string name="etRegisterUsername">Nombre de usuario</string>
    <string name="tilRegisterPassRep">Repetir contraseña</string>


    <string name="facebook_app_id">521285542814103</string>
    <string name="facebook_client_token">6abeb6951f0fb45668db661d3dc5a041</string>
    <string name="fb_login_protocol_scheme">fb521285542814103</string>
    <string name="your_web_client_id">1087116395341-12qu89kf6najbai67cdrnp13dcc0nl2h.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">next</string>
    <string name="usuario">usuario</string>
    <string name="logo">logo</string>
    <string name="true_">true</string>
    <string name="false_">false</string>
    <string name="images">images</string>
    <string name="add_">ADD</string>
    
    <!--HOME MENU GAMES-->
    <string name="gamenormal">Normal</string>
    <string name="gametildes">Tildes</string>
    <string name="gamecadena">Encadenados</string>
    <string name="gamecountry">CountryGuesser</string>
    <string name="gamechooser">4Chooser</string>
    <string name="gameguessit">GuessIt</string>

    <!--GAME OVER TEXTS-->
    <string name="wintext">¡Has ganado!</string>
    <string name="losetext">Has perdido...</string>
    <string name="continuetext">¿Deseas continuar jugando?</string>
    <string name="tvObtain">Has obtenido</string>
</resources>